--- a/generators/app/templates/static/src/scss/set/_set.scss
+++ b/generators/app/templates/static/src/scss/set/_set.scss
@@ -2,9 +2,10 @@
 //
 //*
 
-
 @import "functions";
-@import "app-vars";
+@import "a-colors";
+@import "a-svg";
+@import "a-vars";
 
 @import "../vendor/bootstrap/functions";
 @import "../vendor/bootstrap/variables";
