--- a/generators/app/templates/static/layouts/_includes/app/_footer.twig
+++ b/generators/app/templates/static/layouts/_includes/app/_footer.twig
@@ -1,7 +1,9 @@
 <footer class="c-footer">
     <p>Application footer content</p>
 
-    <p class="c-copy">© {{ 'now'|date('Y') }} ideil</p>
+    <p class="c-copy">© {{ 'now'|date('Y') ~ ' ' ~ APP.title }}</p>
 
-    <p class="c-ideil">made by <a href="https://www.ideil.com/">ideil</a></p>
+    <div class="c-ideil">
+        <a class="c-ideil-link" href="https://www.ideil.com/">made in <span class="sr-only">ideil.</span><img src="{{ PATH.svg }}ideil.svg" width="110" height="16" alt="ideil. — разработка веб-сайтов, интернет-магазинов, мобильных приложений и программного обеспечения" aria-hidden="true"></a>
+    </div>
 </footer>
