--- a/generators/app/templates/static/layouts/_includes/templates/_uncss.twig
+++ b/generators/app/templates/static/layouts/_includes/templates/_uncss.twig
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="uk">
+<!doctype html>
+<html lang="{{ APP.lang }}">
     <head>
         {% include '../app/_head.twig' %}
     </head>
