--- a/generators/app/templates/static/src/scss/set/_a-vars.scss
+++ b/generators/app/templates/static/src/scss/set/_a-vars.scss
@@ -15,43 +15,7 @@ $font-smothing: true;
 //*
 
 $_fs-browser: 16;
-$_px: (1 / $_fs-browser) * 1rem;
-
-
-//## Colors
-//
-//*
-
-//### Base
-$white: #fff;
-// $gray-100: ;
-// $gray-200: ;
-// $gray-300: ;
-// $gray-400: ;
-// $gray-500: ;
-// $gray-600: ;
-// $gray-700: ;
-// $gray-800: ;
-// $gray-900: ;
-$black: #000;
-
-// $primary: ;
-// $light: ;
-// $dark: ;
-
-$body-bg: $white;
-// $body-color: $gray-900;
-
-// $body-bg-inverse: $body-color;
-$body-color-inverse: $body-bg;
-
-//### Socials
-$socials: (
-    'fb': #3b5998,
-    'tlg': #0088cc,
-    'tw': #1da1f2,
-    'yt': #ff3d00
-);
+$_rem: (1 / $_fs-browser) * 1rem;
 
 
 //## Links
@@ -78,7 +42,7 @@ $socials: (
 $font-size-base-px: 16;
 $line-height-base-px: 32;
 
-$font-size-base: $font-size-base-px * $_px;
+$font-size-base: unit-rem($font-size-base-px);
 $line-height-base: $line-height-base-px / $font-size-base-px;
 
 $spacer: $font-size-base * $line-height-base;
@@ -90,6 +54,22 @@ $spacers: (
     3: $spacer,
     4: $spacer * 1.5,
     5: $spacer * 2
+);
+
+$h1-font-size: $font-size-base * 2.5;
+$h2-font-size: $font-size-base * 2;
+$h3-font-size: $font-size-base * 1.75;
+$h4-font-size: $font-size-base * 1.5;
+$h5-font-size: $font-size-base * 1.25;
+$h6-font-size: $font-size-base;
+
+$headings-font-size: (
+    1:  $h1-font-size,
+    2:  $h2-font-size,
+    3:  $h3-font-size,
+    4:  $h4-font-size,
+    5:  $h5-font-size,
+    6:  $h6-font-size
 );
 
 // $headings-margin-bottom: spacer();
@@ -129,6 +109,6 @@ $transition-fade: $transition;
 //
 //*
 
-$tappable-size: 44 * $_px;
-$tappable-size-md: 36 * $_px;
-$tappable-size-sm: 28 * $_px;
+$tappable-size: unit-rem(44);
+$tappable-size-md: unit-rem(36);
+$tappable-size-sm: unit-rem(28);
